# ttj-rs

./: .gitignore  Cargo.toml  README.md  results.csv  results.txt
.github/workflows/: rust.yml
codegen/: README.md  base.jinja  expected_results.json  extract_results.py  pyproject.toml  query_plan_details.json  replace.sh  run_query.py  rust.py
codegen/jsons/: 10a.json  10b.json  10c.json  11a.json  11b.json  11c.json  11d.json  12a.json  12b.json  12c.json  13a.json  13b.json  13c.json  13d.json  14a.json  14b.json  14c.json  15a.json  15b.json  15c.json  15d.json  16a.json  16b.json  16c.json  16d.json  17a.json  17b.json  17c.json  17d.json  17e.json  17f.json  18a.json  18b.json  18c.json  19a.json  19b.json  19c.json  19d.json  1a.json  1b.json  (+73 more)
codegen/templates/: base.jinja  cc.jinja  cct.jinja  chn.jinja  ci.jinja  ct.jinja  it.jinja  k.jinja  kt.jinja  mc.jinja  mi_idx.jinja  mk.jinja  n.jinja  t.jinja
imdb/: README  csv2parquet.sql  export.sql  load.sql  loadpq.sql
src/: data.rs  lib.rs  main.rs  o10a.rs  o10b.rs  o10c.rs  o11a.rs  o11b.rs  o11c.rs  o11d.rs  o12a.rs  o12b.rs  o12c.rs  o13a.rs  o13b.rs  o13c.rs  o13d.rs  o14a.rs  o14b.rs  o14c.rs  o15a.rs  o15b.rs  o15c.rs  o15d.rs  o16a.rs  o16b.rs  o16c.rs  o16d.rs  o17a.rs  o17b.rs  o17c.rs  o17d.rs  o17e.rs  o17f.rs  o18a.rs  o18b.rs  o18c.rs  o19a.rs  o19b.rs  o19c.rs  (+81 more)
