[package]
name = "lfj"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.48.1", features = ["lazy", "parquet", "regex", "strings", "is_in", "dtype-i128"] }
ahash = "0.8.11"
foldhash = "0.1.5"
rustc-hash = "2.1.1"

[profile.release]
debug = false
#codegen-units = 1
lto = "fat"