[package]
name = "lfj"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
polars = { version = "0.48.1", features = ["parquet"] }
ahash = "0.8.11"
foldhash = "0.1.5"
rustc-hash = "2.1.1"
hashbrown = "0.15.4"
bumpalo = { version = "3.19.0", features = ["allocator-api2"]}

[profile.release]
# debug = false
# codegen-units = 1
# enable when benchmarking
# lto = "fat"