[project]
name = "codegen"
version = "0.1.0"
description = "A bare-bone query compilation engine for Join Ordering Benchmark queries"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.6",
    "num2words>=0.5.14",
    "sqlglot>=26.33.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
